@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import com.github.redouane59.twitter.helpers.URLHelper;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -137,7 +138,7 @@ public class UrlHelperTest {
         + URLHelper.ALL_TWEET_FIELDS
         + "&"
         + URLHelper.ALL_USER_FIELDS,
-        urlHelper.getTweetListUrl(List.of("1294174710624849921,1294380029430960128,1294375095746666496")));
+        urlHelper.getTweetListUrl(Arrays.asList("1294174710624849921,1294380029430960128,1294375095746666496")));
   }
 
   @Test
